========================================
Change log for block_taskchain_navigation
========================================

2023-09-29 (38)
 - add help link to list of HTML  color names suitable for gradelinecolor setting

2023-04-21 (37)
 - fix display of grades on coure page in Moodle >= 4.x

2023-01-08 (36)
 - when course display specifies one section at time, ensure that all sections are shown when URL includes 'section=0'

2022-10-20 (35)
 - sort list of mods that use each setting

2022-10-19 (34)
 - only show available dates if there are any modules that use them

2022-10-18 (33)
 - add new date setting: viewable from/until

2022-10-17 (32)
 - add lnks for module types to aid easy selection of modules on access control page.

2022-07-08 (31)
 - improve insertion of script to display grades on course page by not using document.write().

2022-03-02 (30)
 - add zerbra stripes on settings regardlesss of whether not the 'mycourses' element is present

2022-03-01 (29)
 - replace use of deprecated string: grade,core

2022-03-01 (28)
 - add zebra stripes to the settings page if 'itemslect' checkboxes are used

2022-02-28 (27)
 - fix deprecated strings and backgroundimage-size on Moodle 4.x

2022-02-21 (26)
 - do not try to regrade data, forum and glossary activities for which ratings are disabled.

2022-02-02 (24)
 - modify Bootstrap classes so that item select boxes are also shown on small screens

2022-01-24 (23)
 - add new setting to offer link directly to edit page, regardless of course page edit more

2022-01-18 (22)
 - add new setting to allow section number of to prepended to names of single-section categories

2021-09-21 (21)
 - fix code that add checkboxes to allow settings to be copied to similar blocks in other courses

2021-09-14 (20)
 - modify markdown syntax for long help messages (for compatability with Moodle 3.11)

2021-06-18 (29)
 - remove use of the splat-operator, because it causes a syntax error in PHP 5.4

2020-12-14 (27)